# mc833

./: .gitignore  reply-to-empty-udp.py
04/: multi-server.sh  servidor.c
05/: cliente.c  servidor.c
06/: cliente.c  cliente_new  cliente_new.c  servidor.c
chat/: .gitignore  CMakeLists.txt  README.md  chat.cbp  client.c  client_new.c  client_old.c  server.c
chat/lib/: client_list.c  client_list.h  commons.c  commons.h  executors.c  executors.h  interfaces.c  interfaces.h  message_queue.c  message_queue.h
chat/lib/client/: executors.c  executors.h  file_transfer.c  file_transfer.h  utils.c  utils.h
chat/lib/server/: client_list.c  client_list.h  executors.h  message_queue.c  message_queue.h
